# cove

./: .coderabbit.yaml  .envrc.example  .gitignore  .gitmodules  .swiftformat  AGENTS.md  ANDROID_DEVIATIONS_FROM_IOS.md  ANDROID_UI_GAPS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN_COMPLETED.md  PLAN_IMPORTANT_CONTEXT_AND_LEARNINGS.md  PLAN_TODO.md  README.md  SECURITY.md  bip39.py  cratify-todo.txt  filename.txt  justfile  navigation_plan.md  navigation_plan_v2.md  plan.md  plan_context.md  plan_progress.md  rust-analyzer.json
rust/: .gitignore  Cargo.toml  buffer.txt  build.rs  rustfmt.toml  uniffi.toml
rust/.cargo/: config.toml
rust/.config/: nextest.toml
rust/cove-types/: Cargo.toml
rust/crates/: Cargo.toml
rust/crates/cove-bdk/: Cargo.toml
rust/crates/cove-bdk-progressive-scan/: Cargo.toml
rust/crates/cove-bdk-progressive-scan/src/: core.rs  electrum.rs  error.rs  esplora.rs  event.rs  lib.rs  progress.rs  scanner.rs  test_fixtures.rs
rust/crates/cove-bdk-progressive-scan/tests/: live_tests.rs
rust/crates/cove-bdk/src/: coin_selection.rs  descriptor_ext.rs  lib.rs  util.rs
rust/crates/cove-bip39/: Cargo.toml
rust/crates/cove-bip39/src/: lib.rs
rust/crates/cove-common/: Cargo.toml
rust/crates/cove-common/src/: color.rs  consts.rs  lib.rs  logging.rs
rust/crates/cove-cspp/: Cargo.toml
rust/crates/cove-cspp/src/: backup_data.rs  cspp.rs  error.rs  key_derivation.rs  lib.rs  master_key.rs  master_key_crypto.rs  passkey_provider.rs  serde_helpers.rs  store.rs  wallet_crypto.rs
rust/crates/cove-device/: Cargo.toml  uniffi.toml
rust/crates/cove-device/src/: cloud_storage.rs  connectivity.rs  device.rs  keychain.rs  lib.rs  master_key.rs  passkey.rs
rust/crates/cove-http/: Cargo.toml
rust/crates/cove-http/src/: lib.rs
rust/crates/cove-keyteleport/: Cargo.toml
rust/crates/cove-keyteleport/src/: bbqr.rs  crypto.rs  error.rs  lib.rs  numeric_code.rs  packet.rs  password.rs  payload.rs  receiver.rs  sender.rs
rust/crates/cove-keyteleport/tests/: protocol.rs
rust/crates/cove-macros/: Cargo.toml
rust/crates/cove-macros/src/: lib.rs
rust/crates/cove-nfc/: Cargo.toml  uniffi.toml
rust/crates/cove-nfc/src/: ffi.rs  header.rs  lib.rs  message.rs  message_info.rs  ndef_type.rs  parser.rs  payload.rs  record.rs  resume.rs
rust/crates/cove-tap-card/: Cargo.toml  uniffi.toml
rust/crates/cove-tap-card/src/: lib.rs  parse.rs
rust/crates/cove-tokio/: Cargo.toml
rust/crates/cove-tokio-ext/: Cargo.toml
rust/crates/cove-tokio-ext/src/: abortable_task.rs  debounced_task.rs  (+2 more)
rust/crates/cove-types/: Cargo.toml  uniffi.toml
rust/crates/cove-ur/: Cargo.toml  uniffi.toml
rust/crates/cove-util/: Cargo.toml  uniffi.toml
rust/crates/cove_nfc/: Cargo.toml
rust/crates/tap_card/: Cargo.toml  uniffi.toml
rust/crates/uniffi_cli/: Cargo.toml
rust/crates/util/: Cargo.toml
rust/ios/Cove/: Cove.swift
rust/patches/bdk/: 0001-bdk-chain-rusqlite-sqlite-int64-conversions.patch  0002-bdk-remove-workspace-lints-in-patched-crates.patch  0003-bdk-chain-align-rusqlite-with-arti.patch  0004-bdk-chain-allow-coverage-nightly-cfg.patch
rust/src/: app.rs  auth.rs  autocomplete.rs  backup.rs  bdk_store.rs  bip39.rs  bootstrap.rs  build.rs  color.rs  color_scheme.rs  consts.rs  converter.rs  cove_nfc.rs  custom_block_explorer.rs  database.rs  diagnostics.rs  discovery_scanner.rs  encryption.rs  event.rs  fee_client.rs  ffi.rs  fiat.rs  fiat_client.rs  file_handler.rs  fingerprint.rs  format.rs  hardware_export.rs  header_icon_presenter.rs  historical_price.rs  historical_price_service.rs  http_client.rs  key_teleport.rs  keychain.rs  keys.rs  label_manager.rs  lib.rs  loading_popup.rs  lock.rs  logging.rs  macros.rs  (+40 more)
rust/src/app/: alert_state.rs  reconcile.rs
rust/src/backup/: crypto.rs  error.rs  export.rs  import.rs  model.rs  verify.rs
rust/src/bootstrap/: diagnostics.rs  migration.rs
rust/src/cove_nfc/: ffi.rs  header.rs  message.rs  message_info.rs  parser.rs  payload.rs  record.rs  resume.rs
rust/src/custom_block_explorer/: template.rs
rust/src/database/: cbor.rs  cloud_backup.rs  diagnostics_reports.rs  encrypted_backend.rs  error.rs  global_bool.rs  global_cache.rs  global_config.rs  global_flag.rs  historical_price.rs  historical_price_record.rs  historical_prices.rs  in_out_id.rs  key.rs  macros.rs  migration.rs  postcard.rs  record.rs  unsigned_transactions.rs  wallet.rs  wallet_data.rs
rust/src/diagnostics/: redact.rs  upload.rs
rust/src/ffi/: scan_result_data.rs
rust/src/fiat/: amount.rs  client.rs  historical.rs  transaction.rs
rust/src/manager/: auth.rs  auth_manager.rs  cloud_backup_detail_manager.rs  cloud_backup_manager.rs  coin_control_manager.rs  connectivity_manager.rs  deferred_dispatch.rs  deferred_sender.rs  import_wallet.rs  import_wallet_manager.rs  key_teleport_manager.rs  onboarding_manager.rs  pending_wallet.rs  pending_wallet_manager.rs  reconcile_channel.rs  send_flow_manager.rs  wallet.rs  wallet_manager.rs
rust/src/mnemonic/: ext.rs  ffi.rs  grouped_word.rs  number_of_bip39_words.rs  parse.rs  word_access.rs
rust/src/multi_format/: tap_card.rs
rust/src/node/: client.rs  client_builder.rs  tls.rs
rust/src/send_flow/: header_icon_presenter.rs  on_change.rs
rust/src/tap_card/: sats_card_reader.rs  tap_signer_reader.rs
rust/src/transaction/: amount.rs  fee_rate.rs  fees.rs  ffi.rs  ref_map.rs  sent_and_received.rs  transaction_details.rs  unit.rs  unsigned_transaction.rs
rust/src/view_model/: import_wallet.rs  pending_wallet.rs  selected_wallet.rs  wallet.rs  word_validator.rs
rust/src/wallet/: address.rs  addressing.rs  amount.rs  amount_display.rs  balance.rs  builder.rs  confirm.rs  ffi.rs  fingerprint.rs  metadata.rs  public_identity.rs
rust/src/wallet_identity/: backup.rs  existing.rs  identity_set.rs  public.rs
rust/test/data/: descriptor.txt  seed_words_bytes.txt
rust/xtask/: Cargo.toml
rust/xtask/src/: android.rs  android_device.rs  common.rs  github.rs  ios.rs  localization.rs  main.rs  mobile.rs  mobile_artifact.rs  rebase.rs  util.rs  version.rs
(+1241 files in other folders)
