[package]
name = "cove"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "cove"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[workspace]
members = ["crates/*"]

## WORKSPACE DEPENDENCIES
[workspace.dependencies]
# bindings
uniffi = { git = "https://github.com/mozilla/uniffi-rs", features = ["tokio"] }

# sync
parking_lot = { version = "0.12.3" }

# encoding / decoding 
hex = "0.4.3"
base64 = "0.22.0"
data-encoding = "2.8.0"

# parsing
winnow = { version = "0.7", features = ["simd"] }
memchr = "2.7"

# qr
bbqr = { version = "0.3", default-features = false }

# encryption / hashing
chacha20poly1305 = "0.10.1"
sha2 = "0.10.8"
rand = "0.9"

# bdk / bitcoin
bitcoin = { version = "0.32" }
bdk_core = "0.4"
bdk_wallet = { version = "1.1", features = ["keys-bip39", "file_store", "rusqlite"] }
bip39 = { version = "2.0.0", features = ["zeroize"] }

# bitcoin nodes
bdk_esplora = { version = "0.20", features = ["async-https", "tokio"] }
bdk_electrum = { version = "0.21", features = ["use-rustls-ring"], default-features = false }
# bdk_bitcoind_rpc = { version = "0.12", features = [] }

# fast hashmap
ahash = "0.8.11"

once_cell = "1.21.0"

# fmt currency
numfmt = { git = "https://github.com/bitcoinppl/numfmt" }

# num 
num-bigint = "0.4"

# http client
reqwest = { version = "0.12", features = ["json"] }

# store bdk wallet data
bdk_chain = { version = "0.21.0" }

# time
jiff = { version = "0.2", features = [] }

# logging
tracing = "0.1"

# error handling
thiserror = "2.0"
eyre = "0.6"

# database
redb = "2.4"

# ids
nid = "3.0"

# derive stuff
derive_more = { version = "2.0" }
strum = { version = "0.27", features = ["derive"] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

## DEPENDENCIES
[dependencies]
# cove crates
cove-macros = { path = "./crates/cove-macros" }
cove-util = { path = "./crates/cove-util" }
cove-nfc = { path = "./crates/cove-nfc" }
cove-tap-card = { path = "./crates/cove-tap-card" }
cove-types = { path = "./crates/cove-types" }
cove-common = { path = "./crates/cove-common" }
cove-bip39 = { path = "./crates/cove-bip39" }
cove-device = { path = "./crates/cove-device" }

# bitcoin
bitcoin = { workspace = true }
bdk_wallet = { workspace = true }
bip39 = { workspace = true }
bdk_chain = { workspace = true }
bdk_core = { workspace = true }
bdk_file_store = { version = "0.18.0" }

bdk_esplora = { version = "0.20", features = ["async-https", "tokio"] }
bdk_electrum = { version = "0.21", features = ["use-rustls-ring"], default-features = false }

# import / export hardware wallet public keys
# pubport = { version = "0.3.1", features = [] }
pubport = { git = "https://github.com/bitcoinppl/pubport" }

# bip329 labels
bip329 = { version = "0.4.0" }

# tapsigner / satscard
rust-cktap = { git = "https://github.com/bitcoinppl/rust-cktap" }

# actors
act-zero = { version = "0.4.0", features = ["default-tokio"] }
act-zero-ext = { version = "0.1.0", git = "https://github.com/praveenperera/act-zero-ext" }

# async 
tokio = { version = "1.38", features = ["rt"] }
async-trait = "0.1.81"
futures = "0.3.30"
tryhard = "0.5"

# crypto
rand = "0.9"
zeroize = "1.8.1"

# hashing
sha2 = "0.10.8"
argon2 = { version = "0.5.0", features = ["password-hash"] }

# concurrency
crossbeam = "0.8.4"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
once_cell = "1.19.0"

# error handling
eyre = { workspace = true }
thiserror = { workspace = true }


# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

# dirs
dirs = "6.0"

# database
redb = { workspace = true }

# ids
nid = "3.0"

# derive stuff
derive_more = { version = "2.0", features = [
    "display",
    "add",
    "mul",
    "from",
    "into",
    "as_ref",
    "from_str",
    "deref",
    "deref_mut",
] }

strum = { workspace = true, features = ["derive"] }

# helpers / utils / exts
tap = "1.0.1"
itertools = "0.14"

# time 
jiff = { workspace = true, features = [] }

# ser/de
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
cbor4ii = { version = "1.0", features = ["serde1"] }
serde_urlencoded = "0.7"

zerocopy = { version = "0.8", features = ["derive"] }
uniffi = { workspace = true, features = ["tokio"] }

# bit manipulation# bindings
num-bigint = { workspace = true }
bitvec = "1.0"

# fmt
numfmt = { workspace = true }

# url parsing
url = "2.5"

# encryption
chacha20poly1305 = { workspace = true }

# fast hashmap
ahash = { workspace = true }

# http client
reqwest = { workspace = true, features = ["json"] }

# parsing
winnow = { workspace = true }
memchr = { workspace = true }

# encoding / decoding 
hex = { workspace = true }
base64 = { workspace = true }
data-encoding = { workspace = true }

bbqr = { workspace = true }

# sync
arc-swap = "1.7"

# macros
paste = "1.0"

# bit twiddling
bitflags = "2.9"

# csv
csv = "1.3"


[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
tempfile = "3.19"
pretty_assertions = "1.4.1"

tokio = { version = "1.43", features = ["rt", "test-util", "macros"] }
uniffi = { workspace = true, features = ["bindgen-tests"] }


[profile.release]
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = "debuginfo"

[profile.release-smaller]
inherits = "release"
opt-level = 'z'      # Optimize for size.
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce number of codegen units to increase optimizations.
panic = "abort"      # Abort on panic
strip = "debuginfo"
