[package]
name = "cove"
version = "1.4.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "cove"

[workspace]
members = ["crates/*", "xtask"]

## MARK: WORKSPACE DEPENDENCIES
[workspace.dependencies]
# bindings
uniffi = { git = "https://github.com/mozilla/uniffi-rs", branch = "main", features = ["tokio"] }

# sync
parking_lot = { version = "0.12.5" }
arc-swap = "1.9.1"

# async
tokio = { version = "1.52.3" }
async-trait = "0.1.89"

# encoding / decoding 
hex = "0.4.3"
base64 = "0.22.1"
data-encoding = "2.11.0"

# parsing
winnow = { version = "1.0.2", features = ["simd"] }
memchr = "2.8.0"
unicode-normalization = "0.1.25"
url = "2.5.8"

# qr
bbqr = { version = "0.3.5", default-features = false }
foundation-ur = { version = "0.4.0", default-features = false, features = ["std"] }

# cbor
minicbor = { version = "2.2.1", features = ["derive", "std"] }
minicbor-serde = { version = "0.6.2", features = ["std"] }

# encryption / hashing
age = { version = "0.12.1", default-features = false }
chacha20poly1305 = "0.10.1"
hmac = "0.13.0"
hkdf = "0.13.0"
sha2 = "0.11.0"
zeroize = "1.8.2"
rand = "0.10.1"

# compression
ruzstd = "0.8.3"
flate2 = "1.1.9"

# bdk / bitcoin
bitcoin = { version = "0.32.9" }
bdk_wallet = { version = "3.0.0", features = ["keys-bip39", "file_store", "rusqlite"] }
bip39 = { version = "2.2.2", features = ["all-languages", "zeroize"] }
bip329 = "0.6.0"
payjoin = { version = "0.25.0", default-features = false, features = ["v2"] }
pubport = { version = "0.6.0" }

# bitcoin nodes
bdk_esplora = { version = "0.22.2", features = ["async-https-rustls", "tokio"], default-features = false }
bdk_electrum = { version = "0.24.0", features = ["use-rustls-ring"], default-features = false }
# bdk_bitcoind_rpc = { version = "0.12", features = [] }

# fast hashmap
ahash = "0.8.12"

once_cell = "1.21.4"

# fmt currency
numfmt = { git = "https://github.com/bitcoinppl/numfmt" }

# num 
num-bigint = "0.4.6"

# http client
reqwest = { version = "0.13.3", features = ["json", "rustls-no-provider"], default-features = false }

# time
jiff = { version = "0.2.24", features = [] }

# logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# error handling
thiserror = "2.0.18"
eyre = "0.6.12"

# database
redb = "2.6"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }

# ids
nid = "3.0.0"

# dirs
dirs = "6.0.0"

# derive stuff
derive_more = { version = "2.1.1" }
strum = { version = "0.28.0", features = ["derive"] }

# extensions
tap = "1.0.1"

# serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"

## MARK: MAIN CRATE DEPENDENCIES
[dependencies]
# cove crates
cove-macros = { path = "./crates/cove-macros" }
cove-ur = { path = "./crates/cove-ur" }
cove-util = { path = "./crates/cove-util" }
cove-nfc = { path = "./crates/cove-nfc" }
cove-tap-card = { path = "./crates/cove-tap-card" }
cove-types = { path = "./crates/cove-types" }
cove-common = { path = "./crates/cove-common" }
cove-bip39 = { path = "./crates/cove-bip39" }
cove-cspp = { path = "./crates/cove-cspp" }
cove-device = { path = "./crates/cove-device" }
cove-bdk = { path = "./crates/cove-bdk" }
cove-bdk-progressive-scan = { path = "./crates/cove-bdk-progressive-scan" }
cove-tokio = { path = "./crates/cove-tokio" }
cove-http = { path = "./crates/cove-http" }

# bitcoin
bitcoin = { workspace = true }
bdk_wallet = { workspace = true }
bip39 = { workspace = true }
bdk_file_store = { version = "0.22.0" }

bdk_esplora = { version = "0.22.2", features = ["async-https-rustls", "tokio"], default-features = false }
bdk_electrum = { version = "0.24.0", features = ["use-rustls-ring"], default-features = false }

# import / export hardware wallet public keys
pubport = { workspace = true }

# bip329 labels
bip329 = { workspace = true }

# payjoin (BIP77 sender)
payjoin = { workspace = true }

# tapsigner / satscard
rust-cktap = { git = "https://github.com/bitcoinppl/rust-cktap" }

# actors
act-zero = { version = "0.4.0", features = ["default-tokio"] }
act-zero-ext = "0.2.0"

# async 
tokio = { workspace = true, features = ["rt"] }
tokio-util = "0.7.18"
async-trait = { workspace = true }
futures = "0.3.32"
backon = "1.6.0"

# crypto
age = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# hashing
sha2 = { workspace = true }
argon2 = { version = "0.5.3", features = ["password-hash"] }

# concurrency
flume = { version = "0.12.0", features = ["async"] }
parking_lot = { workspace = true, features = ["deadlock_detection"] }
once_cell = { workspace = true }

# error handling
eyre = { workspace = true }
thiserror = { workspace = true }


# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-log = "0.2.0"

# dirs
dirs = { workspace = true }

# database
redb = { workspace = true }
rusqlite = { workspace = true }

# ids
nid = "3.0.0"

# derive stuff
derive_more = { workspace = true, features = [
    "display",
    "add",
    "mul",
    "from",
    "into",
    "as_ref",
    "from_str",
    "deref",
    "deref_mut",
] }

strum = { workspace = true, features = ["derive"] }

# helpers / utils / exts
tap = "1.0.1"
itertools = "0.14.0"

# time 
jiff = { workspace = true, features = [] }

# ser/de
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
minicbor = { workspace = true }
serde_urlencoded = { workspace = true }

zerocopy = { version = "0.8.48", features = ["derive"] }
uniffi = { workspace = true, features = ["tokio"] }

# bit manipulation# bindings
num-bigint = { workspace = true }
bitvec = "1.0.1"

# fmt
numfmt = { workspace = true }

# url parsing
url = { workspace = true }

# encryption
chacha20poly1305 = { workspace = true }
hmac = { workspace = true }

# compression
ruzstd = { workspace = true }
flate2 = { workspace = true }

# fast hashmap
ahash = { workspace = true }

# http client
reqwest = { workspace = true, features = ["json", "rustls-no-provider"], default-features = false }

# tls (needed for crypto provider install in bootstrap)
rustls = { version = "0.23.40", features = ["ring"], default-features = false }

# parsing
winnow = { workspace = true }
memchr = { workspace = true }
unicode-normalization = { workspace = true }

# encoding / decoding 
hex = { workspace = true }
base64 = { workspace = true }
data-encoding = { workspace = true }

bbqr = { workspace = true }
foundation-ur = { workspace = true }

# sync
arc-swap = { workspace = true }

# macros
paste = "1.0.15"
cfg-if = "1.0.4"

# bit twiddling
bitflags = "2.11.1"

# csv
csv = "1.4.0"

# string fuzzy search
strsim = "0.11.1"
minicbor-serde = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.186"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
bdk_wallet = { workspace = true, features = ["test-utils"] }
tempfile = "3.27.0"
pretty_assertions = "1.4.1"
minicbor = { workspace = true }

tokio = { workspace = true, features = ["rt", "test-util", "macros"] }
uniffi = { workspace = true, features = ["bindgen-tests"] }


[profile.release]
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = "debuginfo"

[profile.release-base]
inherits = "release"
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce number of codegen units to increase optimizations.
panic = "abort"      # Abort on panic
strip = "debuginfo"

[profile.release-speed]
inherits = "release-base"
opt-level = 3             # Optimize for speed

[profile.release-smaller]
inherits = "release-base"
opt-level = 'z'           # Optimize for size.
