[package]
name = "crates"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["./macros", "./util", "./cove_nfc"]

[workspace.dependencies]
# bindings
uniffi = { git = "https://github.com/mozilla/uniffi-rs", features = ["tokio"] }

# error handling
thiserror = "2.0"

# derive macros
derive_more = { version = "2", features = ["display", "from", "error"] }

# logging
tracing = "0.1"
tracing-log = "0.2"

# sync
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }

# parsing
winnow = { version = "0.7", features = ["simd"] }

# hashing
sha2 = "0.10.8"
hex = "0.4.3"
