[package]
name = "cove-common"
version = "0.1.0"
edition = "2024"

[dependencies]

# error handling
eyre = "0.6"
thiserror = { workspace = true }

# bitcoin
bitcoin = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

memchr = { workspace = true }
once_cell = "1.19.0"
dirs = "6.0"

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

redb = { workspace = true }
uniffi = { workspace = true }
