[package]
name = "cove-common"
version = "0.1.0"
edition = "2024"

[dependencies]

# error handling
eyre = { workspace = true }
thiserror = { workspace = true }

# bitcoin
bitcoin = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

memchr = { workspace = true }
once_cell = { workspace = true }

dirs = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

redb = { workspace = true }
