[package]
name = "cove-nfc"
version = "0.1.0"
edition = "2024"

[dependencies]
# from parent crate
macros = { path = "../macros" }
util = { path = "../util" }

# error handling
thiserror = { workspace = true }

# uniffi
uniffi = { workspace = true }

# logging
tracing = { workspace = true }

# sync
parking_lot = { workspace = true }

# parsing
winnow = "0.7"

# hashing
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
once_cell = "1.19.0"
