[package]
name = "cove-nfc"
version = "0.1.0"
edition = "2024"

[dependencies]
# from parent crate
cove-macros = { path = "../cove-macros" }
cove-util = { path = "../cove-util" }

# error handling
thiserror = { workspace = true }

# uniffi
uniffi = { workspace = true }

# logging
tracing = { workspace = true }

# sync
parking_lot = { workspace = true }

# parsing
winnow = { workspace = true }

# hashing
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
once_cell = { workspace = true }
