[package]
name = "cove-tap-card"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bitcoin dependencies
bitcoin = { workspace = true, features = ["serde"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"

# Utilities
tracing = "0.1"
thiserror = "2.0"
data-encoding = "2.8.0"
hex = { workspace = true }
derive_more = { version = "2.0", features = ["display"] }

# Uniffi for FFI
uniffi = { workspace = true, features = ["tokio"] }

