[package]
name = "cove-util"
version = "0.1.0"
edition = "2024"

[dependencies]
cove-macros = { path = "../cove-macros" }

bitcoin = { workspace = true, features = ["serde"] }
rand = { workspace = true }
hex = { workspace = true }
uniffi = { workspace = true, features = ["tokio"] }

thiserror = { workspace = true }
tracing = { workspace = true }
numfmt = { workspace = true }

memchr = { workspace = true }

base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
