[package]
name = "cove_nfc"
version = "0.1.0"
edition = "2021"

[dependencies]
# ffi
uniffi = { workspace = true }

# parsing
nom = "7.1"

# error handling
thiserror = { workspace = true }

# derive macros
derive_more = { workspace = true }

# logging
tracing = { workspace = true }
tracing-log = { workspace = true }


[dev-dependencies]
hex = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
